implements login with embedded okta signin widget

--- a/spa/src/app/app.component.html
+++ b/spa/src/app/app.component.html
@@ -4,7 +4,7 @@
   <div fxLayout="row" fxShow="false" fxShow.gt-sm>
     <button mat-button routerLink="/"><mat-icon>home</mat-icon></button>
     <button mat-button routerLink="/products">Products</button>
-    <button mat-button *ngIf="!isAuthenticated" (click)="signIn()"> Login </button>
+    <button mat-button *ngIf="!isAuthenticated" routerLink="/login"> Login </button>
     <button mat-button *ngIf="isAuthenticated" (click)="signOut()"> Logout </button>
   </div>
   <button mat-button [mat-menu-trigger-for]="menu" fxHide="false" fxHide.gt-sm>
@@ -15,8 +15,15 @@
 <mat-menu x-position="before" #menu="matMenu">
   <button mat-menu-item routerLink="/"><mat-icon>home</mat-icon> Home</button>
   <button mat-menu-item routerLink="/products">Products</button>
-  <button mat-menu-item *ngIf="!isAuthenticated" (click)="signIn()"> Login </button>
+  <button mat-menu-item *ngIf="!isAuthenticated" routerLink="/login"> Login </button>
   <button mat-menu-item *ngIf="isAuthenticated" (click)="signOut()"> Logout </button>
 </mat-menu>
+<!-- 
+<mat-menu x-position="before" #menu="matMenu">
+  <button mat-menu-item routerLink="/"><mat-icon>home</mat-icon> Home</button>
+  <button mat-menu-item routerLink="/products">Products</button>
+  <button mat-menu-item *ngIf="!isAuthenticated" (click)="signIn()"> Login </button>
+  <button mat-menu-item *ngIf="isAuthenticated" (click)="signOut()"> Logout </button>
+</mat-menu> -->
 <!-- <app-profile></app-profile> -->
 <router-outlet></router-outlet>
