--- a/spa/src/app/profile/profile.component.html
+++ b/spa/src/app/profile/profile.component.html
@@ -1,6 +1,7 @@
 <div class="profile-card">
-  <div class="shield"></div>
+  <div class="shield">
   <p *ngIf="name$ | async as name">
       Hello {{name}}!
   </p>
+  </div>
 </div>
